# Gaze

./: .gitignore  ACTIVITY_PANEL.md  DESIGN.md  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
backend/: package.json
backend/src/: agentLoop.ts  config.ts  database.ts  index.ts
backend/src/routes/: agents.ts  config.ts  dms.ts  messages.ts  settings.ts
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: AgentActivityBoard.tsx  AgentActivityCard.tsx  AgentDeepDive.tsx  AgentList.tsx  AgentRoster.tsx  AsciiSpinner.tsx  ConfigPanel.tsx  ConfigWizard.tsx  DmPanel.tsx  Forum.tsx  ForumFeed.tsx  InputBar.tsx  MessageBubble.tsx  MessageFeed.tsx  MessageInput.tsx  ProgressBar.tsx  RaccoonAvatar.tsx  ToolBubble.tsx
frontend/src/context/: GazeSSE.tsx
gaze/: __init__.py  agent_loop.py  cli.py  config.py  database.py  llm.py  server.py
