[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gaze"
version = "0.1.0"
description = "AI agent workspace for any repo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "anthropic>=0.34.0",
    "click>=8.1.0",
]

[project.scripts]
gaze = "gaze.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gaze*"]
